# dockerfiles-python

./: .gitignore  Dockerfile.distroless3.9  Makefile  pyproject.toml  training.py
app/: mockup.py
